--- a/index.html
+++ b/index.html
@@ -37,12 +37,28 @@
         <li>Implemented game mechanics, designed a structured game loop, and built a simple UI.</li>
         <li>Ensured code maintainability and scalability through modular architecture.</li>
     </ul>
+
+    <h3>StudySphere – Mobile App (Flutter) - 2025</h3>
+    <ul>
+        <li>Developed a cross-platform app using Flutter and Dart to enhance collaborative study.</li>
+        <li>Implemented features to create and join study rooms for real-time group interaction.</li>
+        <li>Integrated forum-style discussion boards to allow users to share questions and answers.</li>
+        <li>Focused on intuitive UI design, state management, and responsive layout across devices.</li>
+    </ul>
+
+    <h3>Freelance Services Web Platform (PHP, SQLite, JS) - 2025</h3>
+    <ul>
+        <li>Built a responsive freelancing platform using HTML, CSS, JavaScript, PHP, and SQLite.</li>
+        <li>Focused on interactivity, secure authentication, and responsive UI design.</li>
+        <li>Implemented service listings, user registration, messaging, and job posting features.</li>
+    </ul>
     
     <h2>Skills, Technologies & Languages</h2>
     <ul>
         <li><strong>Skills:</strong> Data Structures and Algorithms, Object-Oriented Programming (OOP), Software Design Patterns, Unit Testing</li>
-        <li><strong>Technologies:</strong> Git, GitHub, C++, Java, Python, SQL</li>
+        <li><strong>Technologies:</strong> Git, GitHub, C++, Java, Python, SQL, Flutter, PHP, JavaScript, SQLite</li>
         <li><strong>Languages:</strong> Portuguese, English</li>
     </ul>
 </body>
 </html>
+
